# sitedev1

./: .gitignore  GatherNewsLinks.py  GenAIDirect_Tennis.py.old  GenerateContent.py.old  GenerateContent.py.old2  KickserveConfig.ipynb  config_settings.py  main.py  pyproject.toml  requirements.txt
src/: GatherNewsLinks.py  GenerateContent.py  app.py  bloggerUtils.py  draw32.py  publish_latest_md.py  publish_news_response.py  streamlit_news_app.py  test.py  upload_blog.py
